--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
         <div class="banner-vertical-center-work container text-light d-flex justify-content-center align-items-center py-5 p-0">
             <div class="banner-content col-lg-8 col-12 m-lg-auto text-center">
                 <h1 class="banner-heading h2 display-3 pb-5 semi-bold-600 typo-space-line-center">Our Work</h1>
-                <h3 class="h4 pb-2 regular-400">Elit, sed do eiusmod tempor incididunt</h3>
+                <!-- <h3 class="h4 pb-2 regular-400">Elit, sed do eiusmod tempor incididunt</h3>
                 <p class="banner-body pb-2 light-300">
                     Vector illustration 
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -76,7 +76,7 @@
                     commodo viverra maecenas accumsan lacus.
                 </p>
                 <button type="submit" class="btn rounded-pill btn-outline-light px-4 me-4 light-300">Learn More</button>
-                <button type="submit" class="btn rounded-pill btn-secondary text-light px-4 light-300">Contact Us</button>
+                <button type="submit" class="btn rounded-pill btn-secondary text-light px-4 light-300">Contact Us</button> -->
             </div>
         </div>
     </div>
@@ -221,19 +221,19 @@
                 </div>
                 <div class="col-lg-6 offset-lg-1 align-left">
                     <div class="row">
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/feature-work-1-large.jpg">
-                            <img class="img-fluid" src="./assets/img/feature-work-1.jpg">
+                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/laptop2.png">
+                            <img class="img-fluid" src="./assets/img/laptop2.png">
                         </a>
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/feature-work-2-large.jpg">
-                            <img class="img-fluid" src="./assets/img/feature-work-2.jpg">
+                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/banner-1.jpg">
+                            <img class="img-fluid" src="./assets/img/banner-1.jpg">
                         </a>
                     </div>
                     <div class="row pt-4">
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/feature-work-3-large.jpg">
-                            <img class="img-fluid" src="./assets/img/feature-work-3.jpg">
+                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/banner-2.jpg">
+                            <img class="img-fluid" src="./assets/img/banner-2.jpg">
                         </a>
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/feature-work-4-large.jpg">
-                            <img class="img-fluid" src="./assets/img/feature-work-4.jpg">
+                        <a class="col" data-type="image" data-fslightbox="gallery" href="./assets/img/banner4.jpg">
+                            <img class="img-fluid" src="./assets/img/banner4.jpg">
                         </a>
                     </div>
                 </div>
